--- a/components/41-organisms/theme-footer/_theme-footer.scss
+++ b/components/41-organisms/theme-footer/_theme-footer.scss
@@ -69,19 +69,9 @@
     }
 
     .social-list {
-      display: inline-block;
-      width: auto;
-      max-width: 100%;
-      margin: auto;
-
       ul {
-        justify-content: flex-start;
         width: calc(100% + 1rem);
         margin: 0 -.5rem;
-
-        li {
-          padding: .5rem;
-        }
 
         a {
           &,
